minitrace-macro/tests/trace/ui/err/017-name-is-byte-str.stderr
error: `name` value should be a string
 --> tests/trace/ui/err/017-name-is-byte-str.rs:3:9
  |
3 | #[trace(name = b"name")]
  |         ^^^^
