minitrace-macro/tests/trace/ui/err/017-name-is-byte-str.rs
use minitrace::trace;

#[trace(name = b"name")]
fn f() {}

fn main() {}
